samples/_failures_safe/1761531770_66a10d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7af70f9b.c: In function ‘compute_bounds’:
./samples/SAFE/__tmp_7af70f9b.c:114:9: error: expected identifier at end of input
  114 |         if (mesh->vertices[i].x > mesh->bounds.max.x) mesh->
      |         ^~
./samples/SAFE/__tmp_7af70f9b.c:114:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7af70f9b.c:114:9: error: expected declaration or statement at end of input
